# openapi/gen.types.go
@@ -308,22 +308,22 @@ type TaskTableMigrateRule struct {
 	// source-related configuration
 	Source struct {
 		// schema name, wildcard support
-		Schema *string `json:"schema,omitempty"`
+		Schema string `json:"schema"`
 
-		// source name, wildcard support
-		SourceName *string `json:"source_name,omitempty"`
+		// source name
+		SourceName string `json:"source_name"`
 
 		// table name, wildcard support
-		Table *string `json:"table,omitempty"`
+		Table string `json:"table"`
 	} `json:"source"`
 
 	// downstream-related configuration
 	Target struct {
 		// schema name, does not support wildcards
-		Schema *string `json:"schema,omitempty"`
+		Schema string `json:"schema"`
 
 		// table name, does not support wildcards
-		Table *string `json:"table,omitempty"`
+		Table string `json:"table"`
 	} `json:"target"`
 }
 
